<resources>
    <string name="app_name">BI-Client</string>

    <string name="error_http">Intenta nuevamente. Problema con el servidor </string>

    <!-- Strings related to Main activity -->

    <string name="title_activity_settings">General</string>
    <string name="reload">Recargar</string>
    <string name="item_settings">Configuraciones</string>

    <!-- Strings related to Settings -->

    <string name="pref_title_display_name">API Token</string>
    <string name="pref_title_add_friends_to_messages">Ambiente de ejecucion</string>
    <string name="credentials_required">Configuraciones son requeridas (API Token y Ambiente)</string>
    <string name="load_entires_message">Cargando registros</string>

    <string-array name="pref_example_list_titles">
        <item>Pruebas</item>
        <item>Produccion</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>http://192.168.43.43:49192</item>
        <item>https://webmvc-bi-client.azurewebsites.net</item>
    </string-array>

    <!-- Strings related to Entry -->

    <string name="title_activity_entry">Solicitud</string>
    <string name="entry_dni_label">Cedula</string>
    <string name="entry_status_label">Estado</string>
    <string name="entry_comment_label">Comentario</string>
    <string name="entry_item_label">Articulo</string>
    <string name="entry_client_label">Cliente</string>
    <string name="entry_date_label">Fecha</string>
    <string name="btn_entry_save">Salvar</string>
    <string name="entry_client_email">Correo</string>
    <string name="entry_client_phone">Telefono</string>
    <string name="entry_saved_info">Solicitud almacenada</string>
    <string-array name="list_entry_statuses">
        <item>Solicitud</item>
        <item>Cancelado</item>
        <item>Concretada</item>
        <item>Sin inventario</item>
    </string-array>

</resources>
